--- a/_sass/components/_va-rr-header.scss
+++ b/_sass/components/_va-rr-header.scss
@@ -22,6 +22,13 @@
     z-index: 2;
   }
 }
+
+.va-in-beta .va-rr-header--alt {
+  @include media($medium-screen) {
+    top: 1.8em;
+  }
+}
+
   
 .va-rr-header-logo {
   height: 45px;
